--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.7.1"
   },
   "devDependencies": {
