--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^9.0.1",
-    "pg": "^8.7.1"
+    "knex": "^2.5.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
